force-app/main/default/objects/PricebookEntry/fields/Billing_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Billing_Scheme__c</fullName>
    <label>Billing Scheme</label>
    <length>56</length>
    <type>Text</type>
</CustomField>