force-app/main/default/objects/PricebookEntry/fields/Lookup_Key__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Key__c</fullName>
    <label>Lookup Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>