force-app/main/default/objects/PricebookEntry/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <label>Nickname</label>
    <length>56</length>
    <type>Text</type>
</CustomField>