force-app/main/default/objects/PricebookEntry/fields/Tax_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Tax_Behavior__c</fullName>
    <label>Tax Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>inclusive</fullName>
            </value>
            <value>
                <fullName>exclusive</fullName>
            </value>
            <value>
                <fullName>unspecified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>