force-app/main/default/objects/PricebookEntry/fields/Tiers_Mode__c.field-meta.xml
<CustomField>
    <fullName>Tiers_Mode__c</fullName>
    <label>Tiers Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>graduated</fullName>
            </value>
            <value>
                <fullName>volume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>