force-app/main/default/objects/PricebookEntry/fields/Transform_Quantity_Divide_By__c.field-meta.xml
<CustomField>
    <fullName>Transform_Quantity_Divide_By__c</fullName>
    <label>Transform Quantity Divide By</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>