force-app/main/default/objects/PricebookEntry/fields/Transform_Quantity_Round__c.field-meta.xml
<CustomField>
    <fullName>Transform_Quantity_Round__c</fullName>
    <label>Transform Quantity Round</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>up</fullName>
            </value>
            <value>
                <fullName>down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>